# lalamo

./: .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  .rules  =3.8.0  AGENTS.md  CLAUDE.md  MERGE_READY_CHECKLIST.md  README.md  bench_dflash.sh  bench_inference.py  convert_model.py  dflash_interact.py  hello.py  lalamo_typechecking.py  pyproject.toml  tox.ini
.agents/: settings.local.json
.github/workflows/: bump-version-release.yml  config.yml  convert-k8s.yml  convert-n2hmem16.yml  convert-n2hmem32-max-memory.yml  convert-n2hmem32.yml  nightly-user-install.yml  post-merge-validate-and-draft-release.yml  prerelease-pull-smoke.yml  release-publish.yml  tag-on-merge.yml  test-gpu-runner.yaml  test-publish.yml  tests-prerelease.yml  tests-pull-request.yml  tests.yml
benchmarks/: __init__.py  bench_w4a16_prefill.py
benchmarks/kernels/: tilelang_inference_dot.py  training_grouped_dot.py
docs/plans/: 2026-02-03-evals-cli-refactoring-design.md
examples/: parse_model_spec.py  tiny_qat.py  tiny_yaqa.py  utils.py
fartsovka/: __init__.py  common.py  main.py  quantization.py  samples.py  serialization.py
fartsovka/importers/: __init__.py  common.py  huggingface.py  huggingface_config.py  importers.py
fartsovka/language_model/: __init__.py  decoding.py  language_model.py
fartsovka/model_import/: __init__.py  common.py  model_import.py
fartsovka/models/: baseline_llama.py  common.py  gemma2.py  llama.py  qlora_llama.py  qwen2.py
fartsovka/modules/: __init__.py  activations.py  attention.py  common.py  decoder.py  decoder_layer.py  embedding.py  kv_cache.py  linear.py  llama.py  medusa.py  mlp.py  normalisation.py  normalization.py  patch_embedding.py  patch_merger.py  resblock.py  rope.py  vision_attention.py  vision_layer.py  vision_rope.py  vision_transformer.py
fartsovka/speculator/: NgramNS.ipynb  NgramNS_llama_tokenizer.ipynb  updated-names-dataset.json
fartsovka/test_data/: test_data.py
fartsovka/tokenizer/: __init__.py  hf_tokenizer.py  tokenizer.py
kernels/w4a16_ffi/: build.py  w4a16_ffi.cu
lalamo/: __init__.py  _debug_model_keys.py  batching.py  checkpoint.py  checkpoint_manager.py  commands.py  common.py  distill_runner.py  distillation.py  exportable.py  field.py  initializer.py  input_kind.py  language_model.py  main.py  message_processor.py  mlp_zero_channels.py  model.py  model_registry.py  module.py  preamble.py  preconditioner.py  publish_qwen_moe_offload_wandb.py  publish_qwen_moe_wandb.py  quantization.py  qwen3_next.md  qwen_moe_eval_common.py  qwen_moe_ewma_eval.py  qwen_moe_ewma_study_summary.py  qwen_moe_offload_eval.py  qwen_moe_payloads.py  qwen_moe_routing.py  qwen_moe_rows.py  qwen_moe_transfer_budget_summary.py  registry.py  registry_abc.py  router_model.py  safetensors.py  sampling.py  serialization.py  (+9 more)
lalamo/arrays/: __init__.py  awq.py  base.py  composite.py  dispatch.py  embedding.py  full_precision.py  lora.py  mixture.py  mlx.py  quant_format.py  quantization_helpers.py  specs.py
lalamo/audio/: __init__.py  audio_rendering.py  neutts.py  tts_message_processor.py  utils.py
lalamo/bitshift/: __init__.py  bitshift_codebook.py  bitshift_codebook_config.py  bitshift_codebook_states.py  lut_provider.py  quantizer.py  viterbi.py
lalamo/cli/: __init__.py  chat.py  common.py  convert.py  generate.py  speculator.py
lalamo/compressed/: __init__.py  awq.py  common.py  cute_w4a16_contract.py  cute_w4a16_dot.py  e8p.py  embedding.py  group_quantized.py  hadamard.py  hybrid.py  int.py  lloyd_max.py  lora.py  low_rank.py  microfloat.py  mlx.py  mxfp4.py  normal_float.py  packing.py  quantile.py  quantization_helpers.py  quantized_spec.py  rounding.py  tilelang_dot.py  utils.py  w4a16_ffi.py  w4a16_inference_dot.py
lalamo/data/: __init__.py  completion_features.py  huggingface_message.py  lalamo_completions.py  trace_shard.py  utils.py
lalamo/eval_import/: __init__.py  common.py  internal_format.py  prediction_format.py
lalamo/evals/: __init__.py  cli.py
lalamo/extra/: speculator_phase_profile.py
lalamo/generation/: generator.py
lalamo/helpers/: _debug_model_keys.py
lalamo/inference/: __init__.py  batch_generate.py  batch_scheduler.py  estimator.py  generation.py
lalamo/model_import/: __init__.py  common.py  huggingface_generation_config.py  huggingface_tokenizer_config.py  model_spec.py  origins.py  remote_registry.py
lalamo/models/: __init__.py  _memory_probe_worker.py  batch_scheduler.py  chat_codec.py  classifier.py  common.py  compile_helpers.py  completion_feature_extractor.py  language_model.py  latent_tts_model.py  lm_helpers.py  raw_text_codec.py  router.py  speculator.py  tts_codec.py  tts_model.py
lalamo/modules/: __init__.py  activations.py  attention.py  bert_heads.py  classifier.py  common.py  decoder.py  decoder_layer.py  dflash.py  embedding.py  forward_pass_config.py  kv_cache.py  linear.py  mlp.py  mlx_interop.py  moe.py  new_decoder.py  normalization.py  old_decoder.py  ple.py  rope.py  speculator.py  token_mixer.py  torch_interop.py  transformer.py  transformer_layer.py  utils.py  weaver.py
lalamo/quantization/: __init__.py  affine.py  incoherence.py
lalamo/speculator/: __init__.py  common.py  dflash.py  drafter.py  estimator.py  eval.py  inference.py  ngram.py  ngram_drafter.py  proposal.py  sampler.py  speculate.py  speculator.py  state.py  (+5 more)
scripts/: convert_tied_embedding_to_mlx_quantized.py  run_distillation_experiment.py  run_distillation_sweep.py
tests/: cartesia_mlx_tracer.py  common.py  conftest.py  helpers.py  huggingface_tracer.py  huggingface_utils.py  lfm2_tracer.py  mlx_tracer.py  model_test_tiers.py  model_test_tiers.toml  resource_slots.py  test_cartesia_mlx_models.py  test_chat_template.py  test_decoder_refactoring.py  test_fishaudio_model.py  test_generation.py  test_huggingface_model_conversion.py  test_huggingface_models.py  test_huggingface_modern_bert.py  test_lfm2_models.py  test_mlx_models.py  test_model_spec.py  test_models.py  test_moe.py  test_normalization.py  test_parameter_tree.py  test_quantization.py  test_registry_abc.py  test_speech_models.py
(+515 files in other folders)
