[project]
name = "lalamo"
description = "JAX library for optimization and export of models for use with the UZU inference engine."
requires-python = ">=3.12, <4"
dependencies = [
    "cattrs>=24.1.2",
    "click>=8.1.8",
    "einops>=0.8.0",
    "equinox>=0.11.11",
    "huggingface-hub[hf-transfer]>=0.27.1",
    "jax>=0.4.38; sys_platform == 'darwin'",
    "jax[cuda]>=0.4.38; sys_platform == 'linux'",
    "jaxtyping>=0.2.36",
    "ml-dtypes>=0.5.1",
    "optax>=0.2.4",
    "rich>=14.0.0",
    "thefuzz>=0.22.1",
    "typer>=0.15.1",
    # "jax-metal>=0.1.1 ; sys_platform == 'darwin'",
]
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]

[project.scripts]
lalamo = "lalamo.main:app"

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lalamo*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "lalamo.__version__" }


[tool.uv]
package = true
dev-dependencies = [
    "accelerate>=1.7.0",
    "autoawq>=0.2.9; sys_platform == 'linux'",
    "beartype>=0.19.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pytest-env>=1.1.5",
    "pytest>=8.3.4",
    "torch>=2.7.1",
    "torchao>=0.7.0",
    "transformers>=4.48.0",
    "twine>=6.1.0",
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
torch = [
    { index = "torch-cpu", marker = "platform_system == 'Darwin'" },
    { index = "torch-gpu", marker = "platform_system == 'Linux'" },
]

[tool.pytest.ini_options]
# Disable jaxtyping for now because of its internal bug.
# addopts = "--jaxtyping-packages=lalamo,beartype.beartype"

[tool.pytest_env]
JAX_DEBUG_NANS = "True"
JAX_DEBUG_KEY_REUSE = "True"
JAX_TRACEBACK_FILTERING = "off"

[tool.pyright]
venv = "."
venvPath = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py312"
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "C408",
    "C901",
    "D",
    "EM101",
    "EM102",
    "F722",
    "FBT001",
    "FBT002",
    "N812",
    "PD008",
    "PGH003",
    "PLR0913",
    "PLR2004",
    "PT",
    "PTH123",
    "RET504",
    "S",
    "SIM108",
    "T20",
    "TD003",
    "TRY003",
]
